--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -12,17 +12,22 @@
 	<div id="panel_forums" class="colstack_item">
 		{{range .ItemList}}
 		<div class="rowitem editable_parent" style="{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
-			<a data-field="forum_name" data-type="text" class="editable_block panel_upshift" style="{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
 			<span class="panel_floater">
 			<span data-field="forum_active" data-type="list" class="panel_tag editable_block forum_active {{if .Active}}forum_active_Show" data-value="1{{else}}forum_active_Hide" data-value="0{{end}}" title="Hidden"></span>
-
 			<span data-field="forum_preset" data-type="list" data-value="{{.Preset}}" class="panel_tag editable_block forum_preset forum_preset_{{.Preset}}" title="{{.PresetLang}}"></span>
+
 			<span class="panel_buttons">
 				{{if gt .ID 0}}<a class="panel_tag edit_fields hide_on_edit panel_right_button">Edit</a>
 				<a class="panel_right_button" href="/panel/forums/edit/submit/{{.ID}}"><button class='panel_tag submit_edit show_on_edit' type='submit'>Update</button></a>{{end}}
-				{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button">Delete</a>{{end}}
+				{{if gt .ID 1}}<a href="/panel/forums/delete/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button hide_on_edit">Delete</a>{{end}}
+				<a href="/panel/forums/edit/{{.ID}}" class="panel_tag panel_right_button show_on_edit">Full Edit</a>
 			</span>
 			</span>
+			<span style="float: left;">
+				<a data-field="forum_name" data-type="text" class="editable_block forum_name" style="{{if not .Active}}color:#707070;{{end}}">{{.Name}}</a>
+			</span>
+			<br /><span data-field="forum_desc" data-type="text" class="editable_block forum_desc rowsmall">{{.Desc}}</span>
+			<div style="clear: both;"></div>
 		</div>
 		{{end}}
 	</div>
@@ -37,10 +42,14 @@
 				<div class="formitem"><input name="forum-name" type="text" placeholder="Super Secret Forum" /></div>
 			</div>
 			<div class="formrow">
+				<div class="formitem formlabel"><a>Description</a></div>
+				<div class="formitem"><input name="forum-desc" type="text" placeholder="Where all the super secret stuff happens" /></div>
+			</div>
+			<div class="formrow">
 				<div class="formitem formlabel"><a>Hidden?</a></div>
 				<div class="formitem"><select name="forum-active">
-					<option value="1">Yes</option>
-					<option value="0">No</option>
+					<option value="0">Yes</option>
+					<option value="1">No</option>
 				</select></div>
 			</div>
 			<div class="formrow">
